--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,24 @@
 }
 
 body{
+
     margin: 0 auto;
     max-width: 1200px;
     font-family: 'Lato';
     color: #333;
+    background-color: bisque;
+}
+
+h1{
+    color: black;
+    font-style: inherit;
+    font-family: Georgia, 'Times New Roman';
 }
 
 .icon-cart{
     width: 40px;
     height: 40px;
-    stroke: black;
+    stroke: #000;
 }
 
 .icon-cart:hover{
@@ -44,8 +52,8 @@ header{
     top: 55%;
     right: 0;
 
-    background-color: black;
-    color: white;
+    background-color: #000;
+    color: #fff;
     width: 25px;
     height: 25px;
 
@@ -59,16 +67,15 @@ header{
     font-size: 12px;
 }
 
-
 .container-cart-products{
     position: absolute;
     top: 50px;
     right: 0;
-
-    background-color: white;
+    
+    background-color: #fff;
     width: 400px;
     z-index: 1;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 20);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
     border-radius: 10px;
 }
 
@@ -77,8 +84,8 @@ header{
     align-items: center;
     justify-content: space-between;
     padding: 30px;
-
-    border-bottom: 1px solid rgba(0, 0, 0, 20);
+    
+    border-bottom: 1px solid rgba(0, 0, 0, 0.20);
 }
 
 .info-cart-product{
@@ -87,7 +94,7 @@ header{
     flex: 0.8;
 }
 
-.titulo-pruducto-carrito{
+.titulo-producto-carrito{
     font-size: 20px;
 }
 
@@ -135,7 +142,7 @@ header{
 }
 
 /*Main*/
-.containeritems{
+.container-items{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
@@ -143,18 +150,20 @@ header{
 
 .item{
     border-radius: 10px;
+    border: 2px solid black;
+    background-color: white;
 }
 
 .item:hover{
-    box-shadow: 0 10px 20px  rgba(0, 0, 0, 20);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
 }
 
 .item img{
     width: 100%;
     height: 300px;
     object-fit: cover;
-    border-radius: 10px 10px 0 0;
-    transition: all 2.5s;
+    border-radius: 15px 15px 0 0;
+    transition: all 5s;
 }
 
 .item figure{
@@ -171,6 +180,8 @@ header{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    border-top: 2px solid black;
+    background-color: thistle;
 }
 
 .price{
@@ -185,4 +196,9 @@ header{
     color: white;
     padding: 15px 10px;
     cursor: pointer;
+}
+
+.cart-empty{
+    padding: 20px;
+    text-align: center;
 }
